# jvanhare.github.io

./: .gitignore  404.html  LICENSE  README.md  TODO.md  a9a7754c-3d955b85f8fef1975811.js  a9a7754c-3d955b85f8fef1975811.js.map  app-20e1b736c35b97c12d55.js  app-20e1b736c35b97c12d55.js.map  app-3dbd07a6e27e772acb09.js  app-3dbd07a6e27e772acb09.js.map  app-a7b590230000323313bf.js  app-a7b590230000323313bf.js.map  app-f9a1c72c287e82365889.js  app-f9a1c72c287e82365889.js.map  build.ninja  cb1608f2-acd555bec2d94127e4d5.js  cb1608f2-acd555bec2d94127e4d5.js.map  cb1608f2-eed0b5f68c694e34027b.js  cb1608f2-eed0b5f68c694e34027b.js.map  chunk-map.json  commons-9200b6a5c3132f652739.js  commons-9200b6a5c3132f652739.js.map  commons-b3cfec17a856e208f183.js  commons-b3cfec17a856e208f183.js.map  commons-bbfb22ef83c4e0b6d56d.js  commons-bbfb22ef83c4e0b6d56d.js.map  commons-d50abb070eb760af668d.js  commons-d50abb070eb760af668d.js.map  commons-dfeb83afc05782c2cd7b.js  commons-dfeb83afc05782c2cd7b.js.map  component---src-pages-404-js-b26f4d84c92da26cbd80.js  component---src-pages-404-js-b26f4d84c92da26cbd80.js.map  component---src-pages-404-js-e7463a4520d19670c41c.js  component---src-pages-404-js-e7463a4520d19670c41c.js.map  component---src-pages-cv-js-0fb64f519cd933946d77.js  component---src-pages-cv-js-0fb64f519cd933946d77.js.map  component---src-pages-cv-js-43f2844144074af97011.js  component---src-pages-cv-js-43f2844144074af97011.js.map  component---src-pages-cv-js-7ac8c7eff72fc3ac0577.js  (+85 more)
404/: index.html
bib/: jvanhare.bib
static/cv/: CMakeLists.txt
static/cv/src/: cv.tex  cv.yml
(+143 files in other folders)
